--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ bbb-api-demo/.project
 bigbluebutton-web/.settings*
 bigbluebutton-web/.classpath
 bigbluebutton-web/.project
+bigbluebutton-client/_locale/
