--- a/bigbluebutton-web/grails-app/conf/bigbluebutton.properties
+++ b/bigbluebutton-web/grails-app/conf/bigbluebutton.properties
@@ -84,8 +84,8 @@ defaultDialAccessNumber=613-555-1234
 # Default welcome message to display when the participant joins the web
 # conference. This is only used for the old scheduling which will be
 # removed in the future. Use the API to create a conference.
-defaultWelcomeMessage=<br>Welcome to <b>%%CONFNAME%%</b>!<br><br>For help on using BigBlueButton see these (short) <a href="event:http://www.bigbluebutton.org/content/videos"><u>tutorial videos</u></a>.<br><br>To join the audio bridge click the headset icon (upper-left hand corner).  Use a headset to avoid causing background noise for others.<br>
-defaultWelcomeMessageFooter=This server is running a build of <a href="https://code.google.com/p/bigbluebutton/wiki/090Overview" target="_blank"><u>BigBlueButton 0.9.0-beta</u></a>.
+defaultWelcomeMessage=<br>Bem Vindo ao Web ConferenciaCorp.<br><br>Nome da Conferencia: %%CONFNAME%%<br>Numero de Acesso: %%DIALNUM%%<br>Sala Audioconferencia: %%CONFNUM%%<br><br>Para ajuda entre em contato com a central de atendimento.<br><br>
+defaultWelcomeMessageFooter=
 
 # Default maximum number of users a meeting can have.
 # Doesn't get enforced yet but is the default value when the create
@@ -125,13 +125,12 @@ allowStartStopRecording=true
 #----------------------------------------------------
 # This URL is where the BBB client is accessible. When a user sucessfully
 # enters a name and password, she is redirected here to load the client.
-bigbluebutton.web.serverURL=http://192.168.23.3
-
+bigbluebutton.web.serverURL=http://web3.conferenciacorp.com.br
 
 #----------------------------------------------------
 # Assign URL where the logged-out participant will be redirected after sign-out.
 # If "default", it returns to bigbluebutton.web.serverURL
-bigbluebutton.web.logoutURL=default
+bigbluebutton.web.logoutURL=http://web.conferenciacorp.com.br
 
 # The url of the BigBlueButton client. User's will be redirected here when
 # successfully joining the meeting.
@@ -149,7 +148,7 @@ defaultConfigURL=${bigbluebutton.web.serverURL}/client/conf/config.xml
 apiVersion=0.9
 
 # Salt which is used by 3rd-party apps to authenticate api calls
-securitySalt=778818ef77e83a9b1cab2fd7c908e975
+securitySalt=14276bcc5c4129d639a46d8effb10948
 
 # Directory where we drop the <meeting-id-recorded>.done file
 recordStatusDir=/var/bigbluebutton/recording/status/recorded
